static/sass/components/_images.scss
/*----------------------------------------------
  UIMODULE: Image

  (.image-content-list)
    .image-title
    .image-content
---------------------------------------------- */

.image-content .the-image .nsfw-cover {
    background-color: #333;
    color: #fff;
    font-size: 14px;
    font-weight: bold;
    text-align: center;
    padding: 40px 0;
}

.image-content .the-image .nsfw-cover p {
    margin: 20px 0;
}

.image-content .the-image .nsfw-cover a {
    color: $color-mltshp-blue;
}

.image-content .image-content-footer {
    font-size: 12px;
    color: #888;
    padding-top: 5px;
}

.image-content .image-content-footer .originally-posted-by {
    clear: left;
    padding-bottom: 3px;
}

.image-content .image-content-footer .originally-posted-by .avatar--link {
    text-decoration: none;
}

.image-content-footer .inline-meta {
    display: flex;
    float: left;

    > * {
        flex: none;
    }
}

.image-content-footer .created-at {
    padding-top: 7px;
}

.image-content .image-content-footer .created-at a {
    color: #888;
    text-decoration: none;
}

.image-content .image-content-footer .created-at a:hover {
    color: #666;
    text-decoration: underline;
}

.image-content-footer .stats {
    list-style: none;
    margin: 0 0 0 10px;
    padding: 0;
    color: #4b4b4b;
}

.image-content-footer .stats li {
    float: left;
    font-size: 12px;
    padding-right: 5px;
}

.image-content-footer .stats .views {
    padding-top: 7px;
    display: block;
    float: left;
}

.image-content-footer .stats li a {
    text-decoration: none;
    padding: 7px 7px 10px 25px;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-top-right-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright: 5px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    display: block;
    float: left;
}

.image-content-footer .stats li.saves a {
    background: url('/static/images/save-tiny.svg') 5px 8px no-repeat;
    background-size: 16px 11px;
    padding-left: 24px;
    color: #ff8400;
}

.image-content-footer .stats li.likes a {
    background: url('/static/images/like-tiny.svg') 5px 8px no-repeat;
    background-size: 12px 9px;
    padding-left: 20px;
    color: #ff0000;
}

.image-content-footer .stats li.comments a {
    background: url('/static/images/comment-tiny.svg') 5px 8px no-repeat;
    background-size: 12px 9px;
    padding-left: 20px;
    color: $color-mltshp-blue;
}

.image-content-footer .stats li.selected a {
    background-color: #f4f4f4;
}

.image-content-footer .stats li.likes a span {
    display: none;
}

.image-content-footer .stats li.saves a span {
    display: none;
}

.image-content .image-content-footer a {
    color: #ff0099;
}

.image-content .image-content-footer a:hover,
.image-content .image-content-footer a:focus,
.image-content .image-content-footer a:active {
    color: $link-color-hover;
}

/* list overrides */
.image-content-list .image-content {
    float: none;
    padding: 0 15px 15px;
    border-bottom: 1px dashed #e0e0e0;
}

@media screen and (min-width: 768px) {
    .image-content-list .image-content {
        padding: 0 40px 40px;
    }
}

.image-content-list .image-content {
    padding-top: 0;
}

.image-content-list .remove-from-shake {
    position: absolute;
    width: 21px;
    height: 21px;
    top: 10px;
    right: 10px;
}

@media screen and (min-width: 768px) {
    .image-content-list .remove-from-shake {
        top: 45px;
        right: 10px;
    }
}

/* Inline editing title */
.image-title {
    padding: 15px 15px 0;
    position: relative;
    max-width: 100%;
}

.image-title h1,
.image-title h3 {
    word-wrap: break-word;
    overflow-wrap: break-word;
}

@media screen and (min-width: 768px) {
    .image-title {
        padding: 40px 40px 0;
    }
}

.image-title h3 {
    font-size: 30px;
    font-weight: bold;
    color: #333;
    margin-bottom: 20px;
}

.image-edit-title-hover {
    background-color: $color-edit;
}

.image-edit-title-form {
    display: none;
    flex-direction: column;

    &.is-active {
        display: flex;
    }
}

@media screen and (min-width: 480px) {
    .image-edit-title-form {
        flex-direction: row;
    }
}

.image-content-list .image-edit-title-form {
    margin-bottom: 20px;
}

.image-content-list .image-edit-title-form .title-input {
    font-size: 30px;
    font-weight: bold;
    padding: 2px;
    min-width: 250px;
}

.image-edit-title-form .title-input {
    font-size: 48px;
    font-weight: bold;
    border: 1px solid #ccc;
    margin-bottom: 10px;
    min-width: 0;
    max-width: 100%;
    border-radius: 5px;
    flex: 1;
}

@media screen and (min-width: 480px) {
    .image-edit-title-form .title-input {
        margin-bottom: 0;
    }
}

.image-edit-title-form .buttons {
    padding-left: 10px;
    display: flex;
    align-items: center;
}

.image-edit-title-form .or {
    padding: 0 10px;
    display: block;
    color: #888;
}

.image-content-list .image-edit-title-form .btn {
    @extend .btn-small;
}

/* Inline Editing Description */

.image-content .description {
    color: #333;
    font-size: 14px;
    padding-bottom: 10px;
    line-height: 1.3;
    overflow: hidden;
}

.image-content .the-description {
    word-break: break-word;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.image-content .description-edit-form {
    display: none;
}

.image-content .the-description-hover {
    background-color: $color-edit;
}

.image-content .the-description-blank {
    color: #999;
    font-style: italic;
}

.image-content .description textarea {
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 5px;
    height: 100px;
}

textarea {
    width: 100%;
    min-height: 2.15em;
    resize: vertical;
}

.image-content .description .buttons {
    padding: 10px 0;
    display: flex;
}

.image-content .description .buttons .save {
}

.image-content .description .buttons .or {
    padding: 5px 10px 15px 10px;
    display: block;
    color: #888;
}

.image-content .description .buttons .cancel {
    color: #fff;
}

.image-content .inline-details {
    clear: both;
    background-color: #f4f4f4;
    padding: 7px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    min-height: 34px;
}

.image-content .inline-details .user-saves-likes {
    background-color: #fff;
    padding: 7px;
    min-height: 20px;
}

.image-content .inline-details .user-saves-likes a {
    display: inline-block;
    text-decoration: none;
    font-weight: bold;
    margin-right: 10px;
}

.image-content .inline-details .user-saves-likes img {
    margin-right: 5px;
    float: left;
}

.image-content .inline-details .user-saves-likes .name {
    display: block;
    float: left;
    padding-top: 5px;
}

.image-content .inline-details .comment {
    background-color: #fff;
    padding: 7px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    margin-bottom: 7px;
    display: flex;
}

.image-content .inline-details .comment .avatar {
    flex: none;
}

.image-content .inline-details .comment .comment-body {
    padding-left: 7px;
    overflow: hidden;
    flex: 1;
}

.image-content .inline-details .comment .comment-body-text {
    clear: both;
    padding-top: 3px;
    color: #333;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.image-content .inline-details .comment .meta {
    display: flex;
    align-items: flex-end;
    flex-wrap: wrap;
}

.image-content .inline-details .comment .meta > * + * {
    margin-left: .8em;
}

.image-content .inline-details .comment .delete-form {
    display: none;
}

.image-content .inline-details .comment .meta .username {
    font-weight: bold;
}

.image-content .inline-details .comment .meta .pro-badge {
    margin-left: .25em;
}

.image-content .inline-details .comment .created-at {
    margin-left: 10px;
    padding-top: 0;
}

.image-content .inline-details .comment .reply-to {
    padding-left: 15px;
    background: url('/static/images/icon-reply-arrow.svg') 0 0 no-repeat;
    background-size: 12px 11px;
    display: none;
    color: $link-color;
}

.image-content .inline-details .comment .reply-to:hover,
.image-content .inline-details .comment .reply-to:focus,
.image-content .inline-details .comment .reply-to:active {
    color: $link-color-hover;
}

.image-content .inline-details .comment .delete {
    background: url('/static/images/icon-delete-comment.svg') 0 0 no-repeat;
    background-size: 13px 13px;
    padding-left: 20px;
    display: none;
    color: $color-danger;
}

.image-content .inline-details .comment .delete:hover,
.image-content .inline-details .comment .delete:focus,
.image-content .inline-details .comment .delete:active {
    color: $color-danger-hover;
}

.image-content .inline-details .comment:hover .reply-to {
    display: block;
}

.image-content .inline-details .comment:hover .delete {
    display: block;
}

.image-content .inline-details .show-more-comments {
    text-align: right;
    padding: 7px 0;
    display: block;
    font-weight: bold;
    color: #3cb0fb;
    text-decoration: none;
}

.image-content .inline-details .post-comment-inline textarea {
    color: #999;
    border-radius: 5px;
    padding: .5em;
    height: 2.15em;
    border: 1px solid #d6d6d6;
}

.image-content .inline-details .post-comment-inline-expanded textarea {
    color: #333;
}

.image-content .inline-details .post-comment-inline .button {
    padding-top: 7px;
    display: none;
}

.image-content .inline-details .post-comment-inline-expanded .button {
    display: block;
}

